Compiler/src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADDRESS
    AUTO
    CASE
    CONST
    DEFAULT
    DEREFERENCE
    EXTERN
    FREE
    MALLOC
    PRINTF
    REGISTER
    SCANF
    STATIC
    VOLATILE

Grammar

Rule 0     S' -> program
Rule 1     program -> translation_unit
Rule 2     translation_unit -> external_declaration
Rule 3     translation_unit -> translation_unit external_declaration
Rule 4     external_declaration -> function_definition
Rule 5     external_declaration -> declaration
Rule 6     function_definition -> type_specifier IDENTIFIER LPAREN parameter_list RPAREN compound_statement
Rule 7     function_definition -> type_specifier IDENTIFIER LPAREN RPAREN compound_statement
Rule 8     parameter_list -> parameter_declaration
Rule 9     parameter_list -> parameter_list COMMA parameter_declaration
Rule 10    parameter_declaration -> type_specifier IDENTIFIER
Rule 11    parameter_declaration -> type_specifier
Rule 12    type_specifier -> VOID
Rule 13    type_specifier -> CHAR
Rule 14    type_specifier -> SHORT
Rule 15    type_specifier -> INT
Rule 16    type_specifier -> LONG
Rule 17    type_specifier -> FLOAT
Rule 18    type_specifier -> DOUBLE
Rule 19    type_specifier -> SIGNED
Rule 20    type_specifier -> UNSIGNED
Rule 21    type_specifier -> BOOL
Rule 22    type_specifier -> signed_type
Rule 23    type_specifier -> unsigned_type
Rule 24    signed_type -> SIGNED CHAR
Rule 25    signed_type -> SIGNED SHORT
Rule 26    signed_type -> SIGNED INT
Rule 27    signed_type -> SIGNED LONG
Rule 28    unsigned_type -> UNSIGNED CHAR
Rule 29    unsigned_type -> UNSIGNED SHORT
Rule 30    unsigned_type -> UNSIGNED INT
Rule 31    unsigned_type -> UNSIGNED LONG
Rule 32    declaration -> type_specifier init_declarator_list SEMICOLON
Rule 33    init_declarator_list -> init_declarator
Rule 34    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 35    init_declarator -> declarator
Rule 36    init_declarator -> declarator ASSIGN initializer
Rule 37    declarator -> IDENTIFIER
Rule 38    declarator -> TIMES declarator
Rule 39    declarator -> declarator LBRACKET RBRACKET
Rule 40    declarator -> declarator LBRACKET constant_expression RBRACKET
Rule 41    initializer -> assignment_expression
Rule 42    initializer -> LBRACE initializer_list RBRACE
Rule 43    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 44    initializer_list -> initializer
Rule 45    initializer_list -> initializer_list COMMA initializer
Rule 46    statement -> compound_statement
Rule 47    statement -> expression_statement
Rule 48    statement -> selection_statement
Rule 49    statement -> iteration_statement
Rule 50    statement -> jump_statement
Rule 51    statement -> declaration
Rule 52    compound_statement -> LBRACE RBRACE
Rule 53    compound_statement -> LBRACE statement_list RBRACE
Rule 54    statement_list -> statement
Rule 55    statement_list -> statement_list statement
Rule 56    expression_statement -> SEMICOLON
Rule 57    expression_statement -> expression SEMICOLON
Rule 58    selection_statement -> IF LPAREN expression RPAREN statement
Rule 59    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 60    selection_statement -> SWITCH LPAREN expression RPAREN statement
Rule 61    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 62    iteration_statement -> FOR LPAREN expression_statement expression_statement RPAREN statement
Rule 63    iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 64    iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMICOLON
Rule 65    jump_statement -> BREAK SEMICOLON
Rule 66    jump_statement -> CONTINUE SEMICOLON
Rule 67    jump_statement -> RETURN SEMICOLON
Rule 68    jump_statement -> RETURN expression SEMICOLON
Rule 69    expression -> assignment_expression
Rule 70    expression -> expression COMMA assignment_expression
Rule 71    assignment_expression -> conditional_expression
Rule 72    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 73    assignment_operator -> ASSIGN
Rule 74    assignment_operator -> TIMES_ASSIGN
Rule 75    assignment_operator -> DIVIDE_ASSIGN
Rule 76    assignment_operator -> PLUS_ASSIGN
Rule 77    assignment_operator -> MINUS_ASSIGN
Rule 78    conditional_expression -> logical_or_expression
Rule 79    conditional_expression -> logical_or_expression QUESTION expression COLON conditional_expression
Rule 80    constant_expression -> conditional_expression
Rule 81    logical_or_expression -> logical_and_expression
Rule 82    logical_or_expression -> logical_or_expression OR logical_and_expression
Rule 83    logical_and_expression -> bitwise_or_expression
Rule 84    logical_and_expression -> logical_and_expression AND bitwise_or_expression
Rule 85    bitwise_or_expression -> bitwise_xor_expression
Rule 86    bitwise_or_expression -> bitwise_or_expression BITWISE_OR bitwise_xor_expression
Rule 87    bitwise_xor_expression -> bitwise_and_expression
Rule 88    bitwise_xor_expression -> bitwise_xor_expression BITWISE_XOR bitwise_and_expression
Rule 89    bitwise_and_expression -> equality_expression
Rule 90    bitwise_and_expression -> bitwise_and_expression BITWISE_AND equality_expression
Rule 91    equality_expression -> relational_expression
Rule 92    equality_expression -> equality_expression EQ relational_expression
Rule 93    equality_expression -> equality_expression NE relational_expression
Rule 94    relational_expression -> shift_expression
Rule 95    relational_expression -> relational_expression LT shift_expression
Rule 96    relational_expression -> relational_expression GT shift_expression
Rule 97    relational_expression -> relational_expression LE shift_expression
Rule 98    relational_expression -> relational_expression GE shift_expression
Rule 99    shift_expression -> additive_expression
Rule 100   shift_expression -> shift_expression LSHIFT additive_expression
Rule 101   shift_expression -> shift_expression RSHIFT additive_expression
Rule 102   additive_expression -> multiplicative_expression
Rule 103   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 104   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 105   multiplicative_expression -> cast_expression
Rule 106   multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 107   multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 108   multiplicative_expression -> multiplicative_expression MODULO cast_expression
Rule 109   cast_expression -> unary_expression
Rule 110   cast_expression -> LPAREN type_specifier RPAREN cast_expression
Rule 111   unary_expression -> postfix_expression
Rule 112   unary_expression -> INCREMENT unary_expression
Rule 113   unary_expression -> DECREMENT unary_expression
Rule 114   unary_expression -> unary_operator cast_expression
Rule 115   unary_expression -> SIZEOF unary_expression
Rule 116   unary_expression -> SIZEOF LPAREN type_specifier RPAREN
Rule 117   unary_operator -> BITWISE_AND
Rule 118   unary_operator -> TIMES
Rule 119   unary_operator -> PLUS
Rule 120   unary_operator -> MINUS
Rule 121   unary_operator -> BITWISE_NOT
Rule 122   unary_operator -> NOT
Rule 123   postfix_expression -> primary_expression
Rule 124   postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 125   postfix_expression -> postfix_expression LPAREN RPAREN
Rule 126   postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 127   postfix_expression -> postfix_expression DOT IDENTIFIER
Rule 128   postfix_expression -> postfix_expression ARROW IDENTIFIER
Rule 129   postfix_expression -> postfix_expression INCREMENT
Rule 130   postfix_expression -> postfix_expression DECREMENT
Rule 131   primary_expression -> IDENTIFIER
Rule 132   primary_expression -> constant
Rule 133   primary_expression -> STRING_LITERAL
Rule 134   primary_expression -> LPAREN expression RPAREN
Rule 135   argument_expression_list -> assignment_expression
Rule 136   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 137   constant -> NUMBER
Rule 138   constant -> FLOAT_NUM
Rule 139   constant -> CHAR_LITERAL

Terminals, with rules where they appear

ADDRESS              : 
AND                  : 84
ARROW                : 128
ASSIGN               : 36 73
AUTO                 : 
BITWISE_AND          : 90 117
BITWISE_NOT          : 121
BITWISE_OR           : 86
BITWISE_XOR          : 88
BOOL                 : 21
BREAK                : 65
CASE                 : 
CHAR                 : 13 24 28
CHAR_LITERAL         : 139
COLON                : 79
COMMA                : 9 34 43 45 70 136
CONST                : 
CONTINUE             : 66
DECREMENT            : 113 130
DEFAULT              : 
DEREFERENCE          : 
DIVIDE               : 107
DIVIDE_ASSIGN        : 75
DO                   : 64
DOT                  : 127
DOUBLE               : 18
ELSE                 : 59
EQ                   : 92
EXTERN               : 
FLOAT                : 17
FLOAT_NUM            : 138
FOR                  : 62 63
FREE                 : 
GE                   : 98
GT                   : 96
IDENTIFIER           : 6 7 10 37 127 128 131
IF                   : 58 59
INCREMENT            : 112 129
INT                  : 15 26 30
LBRACE               : 42 43 52 53
LBRACKET             : 39 40 124
LE                   : 97
LONG                 : 16 27 31
LPAREN               : 6 7 58 59 60 61 62 63 64 110 116 125 126 134
LSHIFT               : 100
LT                   : 95
MALLOC               : 
MINUS                : 104 120
MINUS_ASSIGN         : 77
MODULO               : 108
NE                   : 93
NOT                  : 122
NUMBER               : 137
OR                   : 82
PLUS                 : 103 119
PLUS_ASSIGN          : 76
PRINTF               : 
QUESTION             : 79
RBRACE               : 42 43 52 53
RBRACKET             : 39 40 124
REGISTER             : 
RETURN               : 67 68
RPAREN               : 6 7 58 59 60 61 62 63 64 110 116 125 126 134
RSHIFT               : 101
SCANF                : 
SEMICOLON            : 32 56 57 64 65 66 67 68
SHORT                : 14 25 29
SIGNED               : 19 24 25 26 27
SIZEOF               : 115 116
STATIC               : 
STRING_LITERAL       : 133
SWITCH               : 60
TIMES                : 38 106 118
TIMES_ASSIGN         : 74
UNSIGNED             : 20 28 29 30 31
VOID                 : 12
VOLATILE             : 
WHILE                : 61 64
error                : 

Nonterminals, with rules where they appear

additive_expression  : 99 100 101 103 104
argument_expression_list : 126 136
assignment_expression : 41 69 70 72 135 136
assignment_operator  : 72
bitwise_and_expression : 87 88 90
bitwise_or_expression : 83 84 86
bitwise_xor_expression : 85 86 88
cast_expression      : 105 106 107 108 110 114
compound_statement   : 6 7 46
conditional_expression : 71 79 80
constant             : 132
constant_expression  : 40
declaration          : 5 51
declarator           : 35 36 38 39 40
equality_expression  : 89 90 92 93
expression           : 57 58 59 60 61 63 64 68 70 79 124 134
expression_statement : 47 62 62 63 63
external_declaration : 2 3
function_definition  : 4
init_declarator      : 33 34
init_declarator_list : 32 34
initializer          : 36 44 45
initializer_list     : 42 43 45
iteration_statement  : 49
jump_statement       : 50
logical_and_expression : 81 82 84
logical_or_expression : 78 79 82
multiplicative_expression : 102 103 104 106 107 108
parameter_declaration : 8 9
parameter_list       : 6 9
postfix_expression   : 111 124 125 126 127 128 129 130
primary_expression   : 123
program              : 0
relational_expression : 91 92 93 95 96 97 98
selection_statement  : 48
shift_expression     : 94 95 96 97 98 100 101
signed_type          : 22
statement            : 54 55 58 59 59 60 61 62 63 64
statement_list       : 53 55
translation_unit     : 1 3
type_specifier       : 6 7 10 11 32 110 116
unary_expression     : 72 109 112 113 115
unary_operator       : 114
unsigned_type        : 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . translation_unit
    (2) translation_unit -> . external_declaration
    (3) translation_unit -> . translation_unit external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (6) function_definition -> . type_specifier IDENTIFIER LPAREN parameter_list RPAREN compound_statement
    (7) function_definition -> . type_specifier IDENTIFIER LPAREN RPAREN compound_statement
    (32) declaration -> . type_specifier init_declarator_list SEMICOLON
    (12) type_specifier -> . VOID
    (13) type_specifier -> . CHAR
    (14) type_specifier -> . SHORT
    (15) type_specifier -> . INT
    (16) type_specifier -> . LONG
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . DOUBLE
    (19) type_specifier -> . SIGNED
    (20) type_specifier -> . UNSIGNED
    (21) type_specifier -> . BOOL
    (22) type_specifier -> . signed_type
    (23) type_specifier -> . unsigned_type
    (24) signed_type -> . SIGNED CHAR
    (25) signed_type -> . SIGNED SHORT
    (26) signed_type -> . SIGNED INT
    (27) signed_type -> . SIGNED LONG
    (28) unsigned_type -> . UNSIGNED CHAR
    (29) unsigned_type -> . UNSIGNED SHORT
    (30) unsigned_type -> . UNSIGNED INT
    (31) unsigned_type -> . UNSIGNED LONG

    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    SHORT           shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    SIGNED          shift and go to state 14
    UNSIGNED        shift and go to state 15
    BOOL            shift and go to state 16

    program                        shift and go to state 1
    translation_unit               shift and go to state 2
    external_declaration           shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    signed_type                    shift and go to state 17
    unsigned_type                  shift and go to state 18

state 1

    (0) S' -> program .



state 2

    (1) program -> translation_unit .
    (3) translation_unit -> translation_unit . external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (6) function_definition -> . type_specifier IDENTIFIER LPAREN parameter_list RPAREN compound_statement
    (7) function_definition -> . type_specifier IDENTIFIER LPAREN RPAREN compound_statement
    (32) declaration -> . type_specifier init_declarator_list SEMICOLON
    (12) type_specifier -> . VOID
    (13) type_specifier -> . CHAR
    (14) type_specifier -> . SHORT
    (15) type_specifier -> . INT
    (16) type_specifier -> . LONG
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . DOUBLE
    (19) type_specifier -> . SIGNED
    (20) type_specifier -> . UNSIGNED
    (21) type_specifier -> . BOOL
    (22) type_specifier -> . signed_type
    (23) type_specifier -> . unsigned_type
    (24) signed_type -> . SIGNED CHAR
    (25) signed_type -> . SIGNED SHORT
    (26) signed_type -> . SIGNED INT
    (27) signed_type -> . SIGNED LONG
    (28) unsigned_type -> . UNSIGNED CHAR
    (29) unsigned_type -> . UNSIGNED SHORT
    (30) unsigned_type -> . UNSIGNED INT
    (31) unsigned_type -> . UNSIGNED LONG

    $end            reduce using rule 1 (program -> translation_unit .)
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    SHORT           shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    SIGNED          shift and go to state 14
    UNSIGNED        shift and go to state 15
    BOOL            shift and go to state 16

    external_declaration           shift and go to state 19
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    signed_type                    shift and go to state 17
    unsigned_type                  shift and go to state 18

state 3

    (2) translation_unit -> external_declaration .

    VOID            reduce using rule 2 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 2 (translation_unit -> external_declaration .)
    SHORT           reduce using rule 2 (translation_unit -> external_declaration .)
    INT             reduce using rule 2 (translation_unit -> external_declaration .)
    LONG            reduce using rule 2 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 2 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 2 (translation_unit -> external_declaration .)
    SIGNED          reduce using rule 2 (translation_unit -> external_declaration .)
    UNSIGNED        reduce using rule 2 (translation_unit -> external_declaration .)
    BOOL            reduce using rule 2 (translation_unit -> external_declaration .)
    $end            reduce using rule 2 (translation_unit -> external_declaration .)


state 4

    (4) external_declaration -> function_definition .

    VOID            reduce using rule 4 (external_declaration -> function_definition .)
    CHAR            reduce using rule 4 (external_declaration -> function_definition .)
    SHORT           reduce using rule 4 (external_declaration -> function_definition .)
    INT             reduce using rule 4 (external_declaration -> function_definition .)
    LONG            reduce using rule 4 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 4 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 4 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 4 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 4 (external_declaration -> function_definition .)
    BOOL            reduce using rule 4 (external_declaration -> function_definition .)
    $end            reduce using rule 4 (external_declaration -> function_definition .)


state 5

    (5) external_declaration -> declaration .

    VOID            reduce using rule 5 (external_declaration -> declaration .)
    CHAR            reduce using rule 5 (external_declaration -> declaration .)
    SHORT           reduce using rule 5 (external_declaration -> declaration .)
    INT             reduce using rule 5 (external_declaration -> declaration .)
    LONG            reduce using rule 5 (external_declaration -> declaration .)
    FLOAT           reduce using rule 5 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 5 (external_declaration -> declaration .)
    SIGNED          reduce using rule 5 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 5 (external_declaration -> declaration .)
    BOOL            reduce using rule 5 (external_declaration -> declaration .)
    $end            reduce using rule 5 (external_declaration -> declaration .)


state 6

    (6) function_definition -> type_specifier . IDENTIFIER LPAREN parameter_list RPAREN compound_statement
    (7) function_definition -> type_specifier . IDENTIFIER LPAREN RPAREN compound_statement
    (32) declaration -> type_specifier . init_declarator_list SEMICOLON
    (33) init_declarator_list -> . init_declarator
    (34) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (35) init_declarator -> . declarator
    (36) init_declarator -> . declarator ASSIGN initializer
    (37) declarator -> . IDENTIFIER
    (38) declarator -> . TIMES declarator
    (39) declarator -> . declarator LBRACKET RBRACKET
    (40) declarator -> . declarator LBRACKET constant_expression RBRACKET

    IDENTIFIER      shift and go to state 20
    TIMES           shift and go to state 24

    init_declarator_list           shift and go to state 21
    init_declarator                shift and go to state 22
    declarator                     shift and go to state 23

state 7

    (12) type_specifier -> VOID .

    IDENTIFIER      reduce using rule 12 (type_specifier -> VOID .)
    TIMES           reduce using rule 12 (type_specifier -> VOID .)
    RPAREN          reduce using rule 12 (type_specifier -> VOID .)
    COMMA           reduce using rule 12 (type_specifier -> VOID .)


state 8

    (13) type_specifier -> CHAR .

    IDENTIFIER      reduce using rule 13 (type_specifier -> CHAR .)
    TIMES           reduce using rule 13 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 13 (type_specifier -> CHAR .)
    COMMA           reduce using rule 13 (type_specifier -> CHAR .)


state 9

    (14) type_specifier -> SHORT .

    IDENTIFIER      reduce using rule 14 (type_specifier -> SHORT .)
    TIMES           reduce using rule 14 (type_specifier -> SHORT .)
    RPAREN          reduce using rule 14 (type_specifier -> SHORT .)
    COMMA           reduce using rule 14 (type_specifier -> SHORT .)


state 10

    (15) type_specifier -> INT .

    IDENTIFIER      reduce using rule 15 (type_specifier -> INT .)
    TIMES           reduce using rule 15 (type_specifier -> INT .)
    RPAREN          reduce using rule 15 (type_specifier -> INT .)
    COMMA           reduce using rule 15 (type_specifier -> INT .)


state 11

    (16) type_specifier -> LONG .

    IDENTIFIER      reduce using rule 16 (type_specifier -> LONG .)
    TIMES           reduce using rule 16 (type_specifier -> LONG .)
    RPAREN          reduce using rule 16 (type_specifier -> LONG .)
    COMMA           reduce using rule 16 (type_specifier -> LONG .)


state 12

    (17) type_specifier -> FLOAT .

    IDENTIFIER      reduce using rule 17 (type_specifier -> FLOAT .)
    TIMES           reduce using rule 17 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 17 (type_specifier -> FLOAT .)
    COMMA           reduce using rule 17 (type_specifier -> FLOAT .)


state 13

    (18) type_specifier -> DOUBLE .

    IDENTIFIER      reduce using rule 18 (type_specifier -> DOUBLE .)
    TIMES           reduce using rule 18 (type_specifier -> DOUBLE .)
    RPAREN          reduce using rule 18 (type_specifier -> DOUBLE .)
    COMMA           reduce using rule 18 (type_specifier -> DOUBLE .)


state 14

    (19) type_specifier -> SIGNED .
    (24) signed_type -> SIGNED . CHAR
    (25) signed_type -> SIGNED . SHORT
    (26) signed_type -> SIGNED . INT
    (27) signed_type -> SIGNED . LONG

    IDENTIFIER      reduce using rule 19 (type_specifier -> SIGNED .)
    TIMES           reduce using rule 19 (type_specifier -> SIGNED .)
    RPAREN          reduce using rule 19 (type_specifier -> SIGNED .)
    COMMA           reduce using rule 19 (type_specifier -> SIGNED .)
    CHAR            shift and go to state 25
    SHORT           shift and go to state 26
    INT             shift and go to state 27
    LONG            shift and go to state 28


state 15

    (20) type_specifier -> UNSIGNED .
    (28) unsigned_type -> UNSIGNED . CHAR
    (29) unsigned_type -> UNSIGNED . SHORT
    (30) unsigned_type -> UNSIGNED . INT
    (31) unsigned_type -> UNSIGNED . LONG

    IDENTIFIER      reduce using rule 20 (type_specifier -> UNSIGNED .)
    TIMES           reduce using rule 20 (type_specifier -> UNSIGNED .)
    RPAREN          reduce using rule 20 (type_specifier -> UNSIGNED .)
    COMMA           reduce using rule 20 (type_specifier -> UNSIGNED .)
    CHAR            shift and go to state 29
    SHORT           shift and go to state 30
    INT             shift and go to state 31
    LONG            shift and go to state 32


state 16

    (21) type_specifier -> BOOL .

    IDENTIFIER      reduce using rule 21 (type_specifier -> BOOL .)
    TIMES           reduce using rule 21 (type_specifier -> BOOL .)
    RPAREN          reduce using rule 21 (type_specifier -> BOOL .)
    COMMA           reduce using rule 21 (type_specifier -> BOOL .)


state 17

    (22) type_specifier -> signed_type .

    IDENTIFIER      reduce using rule 22 (type_specifier -> signed_type .)
    TIMES           reduce using rule 22 (type_specifier -> signed_type .)
    RPAREN          reduce using rule 22 (type_specifier -> signed_type .)
    COMMA           reduce using rule 22 (type_specifier -> signed_type .)


state 18

    (23) type_specifier -> unsigned_type .

    IDENTIFIER      reduce using rule 23 (type_specifier -> unsigned_type .)
    TIMES           reduce using rule 23 (type_specifier -> unsigned_type .)
    RPAREN          reduce using rule 23 (type_specifier -> unsigned_type .)
    COMMA           reduce using rule 23 (type_specifier -> unsigned_type .)


state 19

    (3) translation_unit -> translation_unit external_declaration .

    VOID            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    CHAR            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    SHORT           reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    INT             reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    LONG            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    FLOAT           reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    DOUBLE          reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    SIGNED          reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    UNSIGNED        reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    BOOL            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    $end            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)


state 20

    (6) function_definition -> type_specifier IDENTIFIER . LPAREN parameter_list RPAREN compound_statement
    (7) function_definition -> type_specifier IDENTIFIER . LPAREN RPAREN compound_statement
    (37) declarator -> IDENTIFIER .

    LPAREN          shift and go to state 33
    ASSIGN          reduce using rule 37 (declarator -> IDENTIFIER .)
    LBRACKET        reduce using rule 37 (declarator -> IDENTIFIER .)
    SEMICOLON       reduce using rule 37 (declarator -> IDENTIFIER .)
    COMMA           reduce using rule 37 (declarator -> IDENTIFIER .)


state 21

    (32) declaration -> type_specifier init_declarator_list . SEMICOLON
    (34) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMICOLON       shift and go to state 34
    COMMA           shift and go to state 35


state 22

    (33) init_declarator_list -> init_declarator .

    SEMICOLON       reduce using rule 33 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 33 (init_declarator_list -> init_declarator .)


state 23

    (35) init_declarator -> declarator .
    (36) init_declarator -> declarator . ASSIGN initializer
    (39) declarator -> declarator . LBRACKET RBRACKET
    (40) declarator -> declarator . LBRACKET constant_expression RBRACKET

    SEMICOLON       reduce using rule 35 (init_declarator -> declarator .)
    COMMA           reduce using rule 35 (init_declarator -> declarator .)
    ASSIGN          shift and go to state 36
    LBRACKET        shift and go to state 37


state 24

    (38) declarator -> TIMES . declarator
    (37) declarator -> . IDENTIFIER
    (38) declarator -> . TIMES declarator
    (39) declarator -> . declarator LBRACKET RBRACKET
    (40) declarator -> . declarator LBRACKET constant_expression RBRACKET

    IDENTIFIER      shift and go to state 39
    TIMES           shift and go to state 24

    declarator                     shift and go to state 38

state 25

    (24) signed_type -> SIGNED CHAR .

    IDENTIFIER      reduce using rule 24 (signed_type -> SIGNED CHAR .)
    TIMES           reduce using rule 24 (signed_type -> SIGNED CHAR .)
    RPAREN          reduce using rule 24 (signed_type -> SIGNED CHAR .)
    COMMA           reduce using rule 24 (signed_type -> SIGNED CHAR .)


state 26

    (25) signed_type -> SIGNED SHORT .

    IDENTIFIER      reduce using rule 25 (signed_type -> SIGNED SHORT .)
    TIMES           reduce using rule 25 (signed_type -> SIGNED SHORT .)
    RPAREN          reduce using rule 25 (signed_type -> SIGNED SHORT .)
    COMMA           reduce using rule 25 (signed_type -> SIGNED SHORT .)


state 27

    (26) signed_type -> SIGNED INT .

    IDENTIFIER      reduce using rule 26 (signed_type -> SIGNED INT .)
    TIMES           reduce using rule 26 (signed_type -> SIGNED INT .)
    RPAREN          reduce using rule 26 (signed_type -> SIGNED INT .)
    COMMA           reduce using rule 26 (signed_type -> SIGNED INT .)


state 28

    (27) signed_type -> SIGNED LONG .

    IDENTIFIER      reduce using rule 27 (signed_type -> SIGNED LONG .)
    TIMES           reduce using rule 27 (signed_type -> SIGNED LONG .)
    RPAREN          reduce using rule 27 (signed_type -> SIGNED LONG .)
    COMMA           reduce using rule 27 (signed_type -> SIGNED LONG .)


state 29

    (28) unsigned_type -> UNSIGNED CHAR .

    IDENTIFIER      reduce using rule 28 (unsigned_type -> UNSIGNED CHAR .)
    TIMES           reduce using rule 28 (unsigned_type -> UNSIGNED CHAR .)
    RPAREN          reduce using rule 28 (unsigned_type -> UNSIGNED CHAR .)
    COMMA           reduce using rule 28 (unsigned_type -> UNSIGNED CHAR .)


state 30

    (29) unsigned_type -> UNSIGNED SHORT .

    IDENTIFIER      reduce using rule 29 (unsigned_type -> UNSIGNED SHORT .)
    TIMES           reduce using rule 29 (unsigned_type -> UNSIGNED SHORT .)
    RPAREN          reduce using rule 29 (unsigned_type -> UNSIGNED SHORT .)
    COMMA           reduce using rule 29 (unsigned_type -> UNSIGNED SHORT .)


state 31

    (30) unsigned_type -> UNSIGNED INT .

    IDENTIFIER      reduce using rule 30 (unsigned_type -> UNSIGNED INT .)
    TIMES           reduce using rule 30 (unsigned_type -> UNSIGNED INT .)
    RPAREN          reduce using rule 30 (unsigned_type -> UNSIGNED INT .)
    COMMA           reduce using rule 30 (unsigned_type -> UNSIGNED INT .)


state 32

    (31) unsigned_type -> UNSIGNED LONG .

    IDENTIFIER      reduce using rule 31 (unsigned_type -> UNSIGNED LONG .)
    TIMES           reduce using rule 31 (unsigned_type -> UNSIGNED LONG .)
    RPAREN          reduce using rule 31 (unsigned_type -> UNSIGNED LONG .)
    COMMA           reduce using rule 31 (unsigned_type -> UNSIGNED LONG .)


state 33

    (6) function_definition -> type_specifier IDENTIFIER LPAREN . parameter_list RPAREN compound_statement
    (7) function_definition -> type_specifier IDENTIFIER LPAREN . RPAREN compound_statement
    (8) parameter_list -> . parameter_declaration
    (9) parameter_list -> . parameter_list COMMA parameter_declaration
    (10) parameter_declaration -> . type_specifier IDENTIFIER
    (11) parameter_declaration -> . type_specifier
    (12) type_specifier -> . VOID
    (13) type_specifier -> . CHAR
    (14) type_specifier -> . SHORT
    (15) type_specifier -> . INT
    (16) type_specifier -> . LONG
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . DOUBLE
    (19) type_specifier -> . SIGNED
    (20) type_specifier -> . UNSIGNED
    (21) type_specifier -> . BOOL
    (22) type_specifier -> . signed_type
    (23) type_specifier -> . unsigned_type
    (24) signed_type -> . SIGNED CHAR
    (25) signed_type -> . SIGNED SHORT
    (26) signed_type -> . SIGNED INT
    (27) signed_type -> . SIGNED LONG
    (28) unsigned_type -> . UNSIGNED CHAR
    (29) unsigned_type -> . UNSIGNED SHORT
    (30) unsigned_type -> . UNSIGNED INT
    (31) unsigned_type -> . UNSIGNED LONG

    RPAREN          shift and go to state 42
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    SHORT           shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    SIGNED          shift and go to state 14
    UNSIGNED        shift and go to state 15
    BOOL            shift and go to state 16

    type_specifier                 shift and go to state 40
    parameter_list                 shift and go to state 41
    parameter_declaration          shift and go to state 43
    signed_type                    shift and go to state 17
    unsigned_type                  shift and go to state 18

state 34

    (32) declaration -> type_specifier init_declarator_list SEMICOLON .
